@@ -48,12 +48,10 @@
 ;; Then mml1991 would not need to require mml2015, and mml1991-use
 ;; could be removed.
 (defvar mml2015-use (or
-		     (condition-case nil
-			 (progn
-			   (require 'epg-config)
-			   (epg-check-configuration (epg-configuration))
-			   'epg)
-		       (error))
+		     (progn
+		       (ignore-errors (require 'epg-config))
+		       (and (fboundp 'epg-check-configuration)
+			   'epg))
 		     (progn
 		       (let ((abs-file (locate-library "pgg")))
 			 ;; Don't load PGG if it is marked as obsolete
